my third commit

--- a/index.html
+++ b/index.html
@@ -24,6 +24,16 @@
           <a href=""><button class="btn">Sign Up</button></a>
         </li>
       </div>
+      <div class="banner">
+        <div class="banner-container">
+          <h2 class="banner-content black-colour">
+            Cool Dark UI Template for
+            <br />
+            Webflow Agencies!
+          </h2>
+          <button class="btn">Stay Focused</button>
+        </div>
+      </div>
     </header>
     <main></main>
     <footer></footer>
