rearranged the code of header

--- a/index.html
+++ b/index.html
@@ -17,25 +17,24 @@
     <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body class="inter-normal">
-    <header class="header">
+      <header class="background">
+        <nav class="container">
       <div class="nav">
-        <div class="logo">LOGO</div>
-        <li>
-          <a href=""><button class="btn">Sign Up</button></a>
-        </li>
-      </div>
+        <h2 class="logo">LOGO</h2>
+        <button class="btn">Sign Up</button>
+      </nav>
       <div class="banner">
         <div class="banner-container">
-          <h2 class="banner-content black-colour">
+          <h2 class="banner-content black-color">
             Cool Dark UI Template for
             <br />
             Webflow Agencies!
           </h2>
-          <button class="btn">Stay Focused</button>
+          <button class="btn-2">Stay Focused</button>
         </div>
       </div>
-    </header>
-    <main></main>
+      </header> 
+    </main>
     <footer></footer>
   </body>
 </html>
