--- a/index.html
+++ b/index.html
@@ -34,6 +34,18 @@
         </div>
       </div>
       </header> 
+      <main>
+      <div class="action-contain">
+        <div class="action-content">
+          <h2 class="action-tile black-color">See It in Action</h2>
+          <p class="action-des">
+            Explore the live preview and imagine your <br> brand in this bold new look.
+          </p>
+          <button class="btn-3">Launch Live Preview</button>
+        </div>
+        <img src="./Assets/wc-mini.png" alt="" class="action-pic"/>
+      </div>
+      
     </main>
     <footer></footer>
   </body>
