productive part done

--- a/index.html
+++ b/index.html
@@ -45,7 +45,24 @@
         </div>
         <img src="./Assets/wc-mini.png" alt="" class="action-pic"/>
       </div>
-      
+
+      <section class="stat sec-bg">
+        <h2 class="stat-title">Joined Thousands of Productive Users</h2>
+        <div class="items">
+      <div class="item">
+        <h1 class="stat-item">50K</h1>
+        <p class="stat-des">Active Users</p>
+      </div>
+      <div class="item">
+        <h1 class="stat-item">2M+</h1>
+        <p class="stat-des">Focus Sessions</p>
+      </div>
+      <div class="item">
+        <h1 class="stat-item">95%</h1>
+        <p class="stat-des">Satisfaction Rate</p>
+        </div>
+      </div>
+      </section>
     </main>
     <footer></footer>
   </body>
