--- a/index.html
+++ b/index.html
@@ -140,6 +140,35 @@
         </div>
       </section>
     </main>
-    <footer></footer>
+
+    <footer class="sec-bg">
+      <div class="footer-column">
+        <h1 class="cont-title">Let's get in touch</h1>
+      </div>
+      <div class="footer-column">
+        <form>
+          <label for="email">Email</label>
+          <input
+            type="email"
+            id="email"
+            placeholder="example@email.com"
+            required
+          />
+
+          <label for="name">Name</label>
+          <input type="text" id="name" placeholder="full name" required />
+
+          <label for="message">Message</label>
+          <textarea
+            name=""
+            id=""
+            rows="3"
+            cols="2"
+            placeholder="Write your message"
+          ></textarea>
+          <input class="last-btn" type="button" value="Get in Touch  " />
+        </form>
+      </div>
+    </footer>
   </body>
 </html>
