--- a/index.html
+++ b/index.html
@@ -170,5 +170,19 @@
         </form>
       </div>
     </footer>
+    <div class="last-part">
+      <h1 class="last-title">LOGO</h1>
+      <p class="last-des">
+        Ready to elevate your online presence? Contact us today to discuss
+        <br />
+        your project and discover how we can bring your vision to life.
+      </p>
+      <nav class="last-navbar">
+        <a href="">Home</a>
+        <a href="">About</a>
+        <a href="">How it works</a>
+        <a href="">Services</a>
+      </nav>
+    </div>
   </body>
 </html>
